[tool.poetry]
name = "Style"
version = "0.1.0"
description = ""
authors = ["Wansn-w <2632324507@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
